--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flame_audio: ^2.0.2
   freezed_annotation:
   json_annotation:
+  riverpod_annotation: ^2.3.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -31,13 +32,14 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
   build_runner: ^2.4.6
   freezed: ^2.4.1
   json_serializable: ^6.7.1
   custom_lint:
   riverpod_lint:
   flutter_gen_runner:
+  riverpod_generator:
 
 flutter:
   uses-material-design: true
