--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flame_forge2d: 0.13.0+1
   flutter_riverpod: ^2.3.6
   firebase_core: ^2.11.0
-  flame_audio: ^2.0.2
+  flame_audio: ^1.3.3
   freezed_annotation:
   json_annotation:
   riverpod_annotation: ^2.3.3
@@ -43,3 +43,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/audio/
